--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,23 @@
-.App {
-  text-align: center;
+.container {
+  width: 200px;
+  padding: 10px;
+  margin-right: auto;
+  margin-left: auto;
+  background: black;
+  color: grey;
+  font-size: 20px;
+  font-weight: 600
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.row {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+}
+
+span.row-item {
+  display: flex;
+}
+
+.active {
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
