--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .container {
   width: 200px;
   padding: 10px;
+  margin-top: 20px;
   margin-right: auto;
   margin-left: auto;
   background: black;
